--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -254,18 +254,28 @@ body {
   box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
   position: relative;
   z-index: 99;
-
-  .graph-container {
+  .graph-mask{
     position: fixed;
-    width: 80%;
-    height: 80%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background: #2b2f33;
-    border-radius: 0.4rem;
-    box-shadow: 0 1rem 5rem rgb(0, 0, 0);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .graph-container {
+      position: relative;
+      width: 80%;
+      height: 80%;
+      background: #2b2f33;
+      border-radius: 0.4rem;
+      box-shadow: 0 1rem 5rem rgb(0, 0, 0);
+    }
   }
+ 
   .search-result-header {
     display: flex;
     align-items: center;
