--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -272,10 +272,14 @@ body {
       position: relative;
       width: 80%;
       height: 80%;
-      // background: rgb(20,20,20);
       background: #fff;
       border-radius: 0.4rem;
       box-shadow: 0 1rem 5rem rgb(0, 0, 0);
+    }
+    .graph-container-placeholder{
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
