--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -274,7 +274,7 @@ body {
       height: 80%;
       background: #fff;
       border-radius: 0.4rem;
-      box-shadow: 0 1rem 5rem rgb(0, 0, 0);
+      box-shadow: 0 .4rem 2rem rgba(0, 0, 0, .5);
     }
     .graph-container-placeholder{
       display: flex;
