Add new color themes

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -449,8 +449,7 @@ body {
       white-space: nowrap;
     }
 
-    svg {
-      color: $pride-color-6;
+    img {
       flex: 0 0 .7rem;
       margin-right: .2rem;
     }
