--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -275,8 +275,18 @@ body {
       background: #fff;
       border-radius: 0.4rem;
       box-shadow: 0 .4rem 2rem rgba(0, 0, 0, .5);
+
+      .graph-title {
+        position: absolute;
+        left: 50%;
+        top: 5%;
+        transform: translateX(-50%);
+        font-size: 1rem;
+        font-weight: 500;
+      }
     }
-    .loading-mask{
+
+    .loading-mask {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -286,7 +296,7 @@ body {
       z-index: 99;
       background: #fff;
     }
-   
+
   }
 
   .search-result-header {
