--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -268,37 +268,40 @@ body {
     align-items: center;
     justify-content: center;
 
+    .graph-title {
+      position: fixed;
+      left: 50%;
+      top: 15%;
+      transform: translateX(-50%);
+      font-size: 1rem;
+      font-weight: 500;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      z-index: 999;
+    }
+
     .graph-container {
-      position: relative;
+      position: initial;
       width: 80%;
       height: 80%;
       background: #fff;
       border-radius: 0.4rem;
       box-shadow: 0 .4rem 2rem rgba(0, 0, 0, .5);
 
-      .graph-title {
+      .loading-mask {
         position: absolute;
-        left: 50%;
-        top: 5%;
-        transform: translateX(-50%);
-        font-size: 1rem;
-        font-weight: 500;
+        width: 80%;
+        height: 80%;
         display: flex;
         align-items: center;
-        gap: 0.5rem;
+        justify-content: center;
+        z-index: 99;
+        background: #fff;
       }
     }
 
-    .loading-mask {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 99;
-      background: #fff;
-    }
+
 
   }
 
@@ -313,7 +316,7 @@ body {
     .btn {
       align-items: center;
       display: inline-flex;
-      
+
       svg {
         margin-right: .2rem;
       }
