--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -279,6 +279,8 @@ body {
       align-items: center;
       gap: 0.5rem;
       z-index: 999;
+      pointer-events: none;
+      user-select: none;
     }
 
     .graph-container {
