Update animation and Twitter links

--- a/styles/scss/_buttons.scss
+++ b/styles/scss/_buttons.scss
@@ -1,5 +1,6 @@
 // Buttons
 .btn {
+  align-items: center;
   appearance: none;
   background: $dark-color;
   border: $border-width solid $dark-color;
