--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -66,13 +66,13 @@ body {
     radial-gradient(at 86% 58%, $pride-color-6 0px, transparent 50%),
     radial-gradient(at 61% 57%, $pride-color-7 0px, transparent 50%);
   display: block;
-  filter: blur(3rem);
-  height: 80vh;
+  filter: blur(1rem);
+  height: 90vh;
   left: 0;
   opacity: .75;
   position: fixed;
-  top: 10vh;
-  width: 100%;
+  top: 5vh;
+  width: 100vw;
   z-index: -1;
 
   &::after,
@@ -88,16 +88,16 @@ body {
   }
 
   &::before {
-    animation: bg-animation 32s ease-in-out infinite;
+    animation: bg-animation 24s ease infinite;
     animation-delay: -8s;
-    background: linear-gradient(-45deg, $pride-color-1 5%, $pride-color-2 50%, $pride-color-4 95%);
+    background: linear-gradient(45deg, $pride-color-1 5%, $pride-color-2 50%, $pride-color-4 95%);
     left: 10vh;
     bottom: 0;
   }
 
   &::after {
-    animation: bg-animation 16s ease-in-out infinite;
-    animation-delay: 8s;
+    animation: bg-animation 24s ease infinite;
+    animation-delay: 0;
     background: linear-gradient(-45deg, $pride-color-5 5%, $pride-color-6 50%, $pride-color-7 95%);
     top: 0;
     right: 10vh;
@@ -613,9 +613,9 @@ body {
 
   .footer-feedback {
     @media screen and (min-width: $size-md) {
-      bottom: .5rem;
+      bottom: 1rem;
       position: fixed;
-      right: .5rem;
+      right: 1rem;
     }
 
     span {
