--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -81,3 +81,65 @@
     filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.1));
     border-radius: 12px;
 }
+
+// Tabs
+.panel-tab {
+    align-items: center;
+    background: transparent;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 20px 0;
+    gap: 24px;
+    .tab-item {
+        width: 50px;
+        margin-top: 0;
+        a {
+            border-bottom: 2px solid transparent;
+            display: block;
+            margin: 0 8px 0 0;
+            text-decoration: none;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 22px;
+            color: #121212;
+            opacity: 0.5;
+            &:focus,
+            &:hover {
+                border-bottom-color: #121212;
+                opacity: 1;
+                font-weight: 700;
+            }
+        }
+
+        &.active a,
+        a.active {
+            border-bottom-color: #121212;
+            opacity: 1;
+            font-weight: 700;
+        }
+
+        // &.tab-action {
+        //     flex: 1 0 auto;
+        //     text-align: right;
+        // }
+
+        // .btn-clear {
+        //     margin-top: 4px;
+        // }
+    }
+}
+
+
+.profile-tab-content{
+
+}
+
+
+.nft-tab-content{
+
+}
+
+.feeds-tab-content{
+    
+}
