--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -57,30 +57,93 @@
 }
 
 // Record Social Media Item
-.record-item {
-    position: relative;
-    width: 36px;
-    height: 36px;
-    background: rgba(18, 18, 18, 0.08);
-    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
-    border-radius: 10px;
+.records {
+    margin: 20px 0;
 
-    .record-item-img {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 20px;
-        height: 20px;
+    .record-item {
+        position: relative;
+        width: 36px;
+        height: 36px;
+        background: rgba(18, 18, 18, 0.08);
+        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
+
+        .record-item-img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 20px;
+            height: 20px;
+        }
     }
 }
 
-.collection-nft-item {
-    width: 80px;
-    height: 80px;
-    filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.1));
-    border-radius: 12px;
+.nft-collection-container {
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    width: 100%;
+
+    .nft-collection-title {
+        font-family: 'Inter';
+        font-weight: 900;
+        font-size: 14px;
+        line-height: 20px;
+        text-transform: uppercase;
+        color: #000000;
+    }
+
+    .collection-switcher {
+        background: #ECECEC;
+        border-radius: 8px;
+        padding: 4px;
+        display: flex;
+        align-items: center;
+        gap: 4px;
+
+        .collection-img {
+            width: 20px;
+            height: 20px;
+            border-radius: 8px;
+        }
+
+        .collection-name {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 20px;
+            text-transform: uppercase;
+            color: #000000;
+        }
+
+        .collection-switch-arrow {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-left: 12px;
+
+            img {
+                width: 7px;
+            }
+        }
+    }
+    .collection-nft-item {
+        width: 80px;
+        height: 80px;
+        filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.1));
+        border-radius: 12px;
+        img{
+            width: 100%;
+            height: 100%;
+            border-radius: 12px;
+        }
+    }
 }
+
+
 
 // Tabs
 .panel-tab {
@@ -91,9 +154,11 @@
     list-style: none;
     margin: 20px 0;
     gap: 24px;
+
     .tab-item {
         width: 50px;
         margin-top: 0;
+
         a {
             border-bottom: 2px solid transparent;
             display: block;
@@ -104,6 +169,7 @@
             line-height: 22px;
             color: #121212;
             opacity: 0.5;
+
             &:focus,
             &:hover {
                 border-bottom-color: #121212;
@@ -131,15 +197,9 @@
 }
 
 
-.profile-tab-content{
-
-}
+.profile-tab-content {}
 
 
-.nft-tab-content{
+.nft-tab-content {}
 
-}
-
-.feeds-tab-content{
-    
-}
+.feeds-tab-content {}
