feat: some animation

--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -19,8 +19,8 @@
             height: 100%;
             max-width: 64px;
             max-height: 64px;
-            filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.15));
             border-radius: 12px;
+            box-shadow: 0 4px 24px rgba(0, 0, 0, 0.15);
 
             img {
                 width: 100%;
@@ -71,6 +71,11 @@
         box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
         border-radius: 10px;
         cursor: pointer;
+        transition: box-shadow .2s ease 0s;
+
+        &:hover {
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        }
 
         .record-item-img {
             position: absolute;
@@ -107,6 +112,13 @@
         align-items: center;
         gap: 4px;
         margin-bottom: 10px;
+        cursor: pointer;
+
+        &:hover {
+            box-shadow: 0 .2rem .4rem rgba(0, 0, 0, .05);
+        }
+
+        transition: all .2s ease-in-out 0s;
 
         .collection-img {
             width: 20px;
@@ -130,7 +142,8 @@
             margin-left: 12px;
 
             img {
-                width: 7px;
+                width: 8px;
+                margin-right: 4px;
             }
         }
     }
@@ -146,15 +159,26 @@
 
         .collection-nft-item {
             width: 80px;
+            height: 80px;
             min-width: 80px;
+            overflow: hidden;
             border-radius: 12px;
+
+            &:hover img {
+                transform: scale(1.2);
+                box-shadow: 0px 4px 24px rgb(0 0 0 / 50%);
+            }
 
             img {
                 width: 100%;
                 height: 100%;
+                cursor: pointer;
+                object-fit: cover;
                 border-radius: 12px;
+                transition: transform .4s ease 0s;
             }
         }
+
     }
 
     .nft-detail-list {
@@ -171,13 +195,29 @@
             color: #000000;
             text-transform: uppercase;
 
-            img {
+            .img-container {
                 width: 140px;
                 height: 140px;
-                filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.1));
+                box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
                 border-radius: 12px;
                 margin-bottom: 10px;
+                cursor: pointer;
+
+                &:hover img {
+                    transform: scale(1.1);
+                    box-shadow: 0px 4px 24px rgb(0 0 0 / 50%);
+                }
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 12px;
+                    transition: transform .4s ease 0s;
+                }
             }
+
+
 
             .collection-name {
                 font-weight: 400;
@@ -225,6 +265,7 @@
                 border-bottom-color: #121212;
                 opacity: 1;
                 font-weight: 700;
+                transition: all .1s linear 0s;
             }
         }
 
@@ -234,22 +275,5 @@
             opacity: 1;
             font-weight: 700;
         }
-
-        // &.tab-action {
-        //     flex: 1 0 auto;
-        //     text-align: right;
-        // }
-
-        // .btn-clear {
-        //     margin-top: 4px;
-        // }
     }
 }
-
-
-.profile-tab-content {}
-
-
-.nft-tab-content {}
-
-.feeds-tab-content {}
