--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -132,14 +132,9 @@
     align-items: flex-start;
     gap: 10px;
     width: 100%;
+    max-height: 70vh;
+    overflow-y: auto;
 
-    .nft-collection-title {
-        font-weight: 900;
-        font-size: 14px;
-        line-height: 20px;
-        text-transform: uppercase;
-        color: #000000;
-    }
 
     .collection-switcher {
         background: #ECECEC;
@@ -218,56 +213,83 @@
 
     }
 
-    .nft-detail-list {
-        width: 100%;
+    .nft-collection-list {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: flex-start;
         gap: 20px;
 
-        .detail-item {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            font-size: 10px;
-            color: #000000;
-            text-transform: uppercase;
-
-            .img-container {
-                width: 140px;
-                height: 140px;
-                box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
-                border-radius: 12px;
-                margin-bottom: 10px;
-                cursor: pointer;
-
-                &:hover img {
-                    transform: scale(1.1);
-                    box-shadow: 0px 4px 24px rgb(0 0 0 / 50%);
+        .collection-item {
+            .nft-collection-title-box {
+                display: flex;
+                gap: 10px;
+                align-items: center;
+                margin-bottom: 20px;
+                .nft-collection-title {
+                    font-weight: 900;
+                    font-size: 14px;
+                    line-height: 20px;
+                    text-transform: uppercase;
+                    color: #000000;
                 }
 
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    border-radius: 12px;
-                    transition: transform .4s ease 0s;
+                .collection-logo {
+                    width: 20px;
+                    height: 20px;
                 }
             }
 
+            .nft-item-coantiner {
+                display: flex;
+                gap: 20px;
+                flex-wrap: wrap;
 
+                .detail-item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    font-size: 10px;
+                    color: #000000;
+                    text-transform: uppercase;
 
-            .collection-name {
-                font-weight: 400;
-                line-height: 20px;
+                    .img-container {
+                        width: 140px;
+                        height: 140px;
+                        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+                        border-radius: 12px;
+                        margin-bottom: 10px;
+                        cursor: pointer;
+
+                        &:hover img {
+                            transform: scale(1.02);
+                            box-shadow: 0px 4px 10px rgb(0 0 0 / 30%);
+                        }
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            border-radius: 12px;
+                            transition: transform .4s ease 0s;
+                        }
+                    }
+
+                    .collection-name {
+                        font-weight: 400;
+                        line-height: 20px;
+                    }
+
+                    .nft-name {
+                        font-weight: 700;
+                        line-height: 20px;
+                    }
+                }
+
             }
 
-            .nft-name {
-                font-weight: 700;
-                line-height: 20px;
-            }
         }
-    }
 
+    }
 }
 
 
@@ -282,10 +304,11 @@
     margin: 20px 0;
     gap: 24px;
     overflow: hidden;
-    
+
     .tab-item {
         min-width: 60px;
         margin-top: 0;
+
         a {
             border-bottom: 2px solid transparent;
             display: block;
@@ -316,7 +339,7 @@
     }
 }
 
-.feeds-container{
+.feeds-container {
     max-height: 60vh;
     overflow-y: auto;
 }
