--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -6,6 +6,8 @@
     width: 100%;
     max-width: 528px;
     min-height: 78vh;
+    max-height: 78vh;
+    height: 100%;
     position: fixed;
     z-index: 100;
     left: 50%;
@@ -225,6 +227,7 @@
                 gap: 10px;
                 align-items: center;
                 margin-bottom: 20px;
+
                 .nft-collection-title {
                     font-weight: 900;
                     font-size: 14px;
@@ -342,4 +345,55 @@
 .feeds-container {
     max-height: 60vh;
     overflow-y: auto;
+}
+
+.nft-dialog-basic {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+
+    .nft-dialog-asset-player {
+        width: 100%;
+        max-width: 200px;
+        min-width: 200px;
+        height: 100%;
+        max-height: 200px;
+        min-height: 200px;
+        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
+        border-radius: 12px;
+    }
+
+    .nft-dialog-info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+
+        .nft-dialog-collection {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+
+            .avatar {
+                border-radius: 4px;
+            }
+
+            .title {
+                font-weight: 400;
+                font-size: 10px;
+                line-height: 20px;
+                text-transform: uppercase;
+            }
+
+        }
+
+        .nft-name {
+            font-weight: 900;
+            font-size: 20px;
+            line-height: 1.2;
+            text-transform: uppercase;
+            color: #000000;
+            margin-bottom: 10px;
+        }
+    }
 }
