--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -2,7 +2,7 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
-    padding: 30px;
+    padding-top: 30px;
     width: 100%;
     max-width: 528px;
     height: 85vh;
@@ -52,6 +52,7 @@
         display: flex;
         align-items: center;
         gap: 20px;
+        padding-left: 30px;
 
         .identity-avatar-container {
             width: 100%;
@@ -397,6 +398,7 @@
         gap: 20px;
         max-height: 70vh;
         overflow-y: auto;
+        padding: 0 30px;
 
         .collection-item {
             .nft-collection-title-box {
@@ -484,6 +486,7 @@
     margin: 20px 0;
     gap: 24px;
     overflow: hidden;
+    padding: 0 30px;
 
     .tab-item {
         min-width: 60px;
@@ -519,7 +522,11 @@
     }
 }
 
-.feeds-container {
-    max-height: 60vh;
-    overflow-y: auto;
+.feeds-container-box {
+    padding: 0 30px;
+
+    .feeds-container {
+        max-height: 60vh;
+        overflow-y: auto;
+    }
 }
