--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -305,22 +305,25 @@
 
             .dropdown-menu {
                 position: absolute;
-                top: 35px;
                 width: 100%;
+                max-height: 0px;
                 text-align: center;
                 background: #fff;
                 border-radius: 4px;
-                border: 1px solid #ddd;
+                top: 35px;
+                border: 1px solid #ddd;                
             }
 
             .dropdown-button {
                 width: 100%;
+                max-width: 200px;
                 text-align: center;
                 position: relative;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
                 gap: 6px;
+                padding: 0 6px;
             }
 
             .dropdown-button,
@@ -330,30 +333,14 @@
             }
 
             .dropdown-menu>div.active {
-                background: #c6eafd;
+                background: #e7f8eb;
             }
 
             .dropdown-menu>div:hover {
                 background: #e7f8eb;
             }
 
-            .dropdown-triangle_button {
-                width: 26px;
-                border-left: 1px solid #ddd;
-                height: 100%;
-                position: absolute;
-                right: 0px;
-                top: 0px;
-            }
 
-            .dropdown-triangle {
-                display: inline-block;
-                width: 0;
-                height: 0;
-                border-left: 6px solid transparent;
-                border-right: 6px solid transparent;
-                border-top: 6px solid #282c34;
-            }
         }
     }
 
@@ -398,6 +385,7 @@
         max-height: 70vh;
         overflow-y: auto;
         padding: 0 30px;
+        width: 100%;
 
         .collection-item {
             .nft-collection-title-box {
