--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -130,6 +130,7 @@
 .nft-dialog-basic {
     display: flex;
     gap: 30px;
+    padding: 0 30px;
 
     .nft-dialog-asset-player {
         width: 100%;
@@ -182,7 +183,7 @@
 
 .nft-dialog-scroll-box {
     overflow-y: auto;
-
+    padding: 0 30px;
     .nft-dialog-des-box {
         display: flex;
         flex-direction: column;
@@ -306,7 +307,6 @@
             .dropdown-menu {
                 position: absolute;
                 width: 100%;
-                max-height: 0px;
                 text-align: center;
                 background: #fff;
                 border-radius: 4px;
