fix: swap token

--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -578,6 +578,12 @@
                         box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
                         border-radius: 12px;
                     }
+                    .feed-swap-img{
+                        width: 24px;
+                        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
+                        border-radius: 12px;
+                        background: transparent;
+                    }
 
                     .feed-nft-info {
                         display: flex;
