--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -521,9 +521,11 @@
     }
 
     .feeds-container {
+        max-width: 100%;
         max-height: 60vh;
         margin-top: 20px;
         overflow-y: auto;
+        overflow-x: hidden;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -546,6 +548,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 10px;
+                max-width: 90%;
 
                 .feed-item-header {
                     width: 100%;
