--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -529,6 +529,11 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        .feed-timestamp{
+            width: fit-content;
+            margin-left: 34px;
+            opacity: .5;
+        }
 
         .feed-item-box {
             display: flex;
