fix: timestamp gap

--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -533,6 +533,7 @@
             width: fit-content;
             margin-left: 34px;
             opacity: .5;
+            margin-top: 10px;
         }
 
         .feed-item-box {
