Update GraphQL queries

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -603,7 +603,7 @@ body {
 
 //- Web3.bio Footer
 .web3bio-footer {
-  color: $gray-color-dark;
+  color: $gray-color;
   font-size: .7rem;
   font-weight: 500;
   padding-top: .5rem;
