--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -133,12 +133,10 @@
     padding: 0 30px;
 
     .nft-dialog-asset-player {
-        width: 100%;
+        width: 200px;
+        height: 200px;
         max-width: 200px;
-        min-width: 200px;
-        height: 100%;
         max-height: 200px;
-        min-height: 200px;
         box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
         border-radius: 12px;
 
