--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -600,6 +600,8 @@
                     .feed-nft-img {
                         width: 40px;
                         height: 40px;
+                        min-width: 40px;
+                        min-height: 40px;
                         box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
                         border-radius: 12px;
                     }
