--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -604,6 +604,11 @@
                         min-height: 40px;
                         box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
                         border-radius: 12px;
+
+                        img {
+                            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
+                            border-radius: 12px;
+                        }
                     }
 
                     .feed-swap-img {
