--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -85,7 +85,12 @@
                 opacity: 0.5;
                 gap: 10px;
                 align-items: center;
-
+                .action{
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
+                }
                 .copy-icon {
                     cursor: pointer;
                 }
