--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -603,6 +603,7 @@
                     gap: 10px;
 
                     .feed-nft-img {
+                        position: relative;
                         width: 40px;
                         height: 40px;
                         min-width: 40px;
