--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -435,6 +435,7 @@
                     text-transform: uppercase;
 
                     .img-container {
+                        position: relative;
                         width: 140px;
                         height: 140px;
                         box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
